; ModuleID = '/home/carl/AnghaBench/git/negotiator/extr_default.c_add_tip.c'
source_filename = "/home/carl/AnghaBench/git/negotiator/extr_default.c_add_tip.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fetch_negotiator = type { i32, i32* }
%struct.commit = type { i32 }

@SEEN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.fetch_negotiator*, %struct.commit*)* @add_tip to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @add_tip(%struct.fetch_negotiator* %0, %struct.commit* %1) #0 {
  %3 = alloca %struct.fetch_negotiator*, align 8
  %4 = alloca %struct.commit*, align 8
  store %struct.fetch_negotiator* %0, %struct.fetch_negotiator** %3, align 8
  store %struct.commit* %1, %struct.commit** %4, align 8
  %5 = load %struct.fetch_negotiator*, %struct.fetch_negotiator** %3, align 8
  %6 = getelementptr inbounds %struct.fetch_negotiator, %struct.fetch_negotiator* %5, i32 0, i32 1
  store i32* null, i32** %6, align 8
  %7 = load %struct.fetch_negotiator*, %struct.fetch_negotiator** %3, align 8
  %8 = getelementptr inbounds %struct.fetch_negotiator, %struct.fetch_negotiator* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 8
  %10 = load %struct.commit*, %struct.commit** %4, align 8
  %11 = load i32, i32* @SEEN, align 4
  %12 = call i32 @rev_list_push(i32 %9, %struct.commit* %10, i32 %11)
  ret void
}

declare dso_local i32 @rev_list_push(i32, %struct.commit*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
